# btmux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  package-lock.json  package.json
.github/workflows/: release.yml
extras/claude-code/: hooks.json
frontend/: index.html  package-lock.json  package.json  record-demo.ts  vite.config.ts
frontend/src/: App.tsx  fonts.css  index.css  main.tsx
frontend/src/components/: ConnectionBanner.tsx  FileBrowserOverlay.tsx  LandingPage.tsx  MirrorPane.tsx  Overlay.tsx  PaneTitleBar.tsx  SessionPane.tsx  SessionPool.tsx  SessionSwitcher.tsx  SessionView.tsx  StatusBar.tsx  SysStatBar.tsx  TerminalPane.tsx  Toast.tsx  ToastCard.tsx  WindowGrid.tsx
frontend/src/hooks/: useControlSocket.ts  useFileSocket.ts  useFontLoader.ts  useKeybindings.ts  useSysStats.ts
frontend/src/lib/: apply-theme-vars.ts  chrome-colors.ts  pix-filter.ts  pumpRenders.ts  terminalFxShaders.ts  utils.ts
frontend/src/protocol/: file-messages.ts  messages.ts
frontend/src/state/: defaultTheme.ts  fileStore.ts  layout.ts  sessionMru.ts  store.ts  store.tsx  treeNodes.ts  types.ts  windowMru.ts
scripts/: dev.sh  install.sh  test-notifications.sh
src/: config.rs  file_git.rs  file_search.rs  fs_ops.rs  git.rs  main.rs  persistence.rs  server.rs  service.rs
src/api/: mod.rs  pane_io.rs  panes.rs  sessions.rs  windows.rs
src/mcp/: mod.rs  run_command.rs  tools.rs
src/pty/: mod.rs  vt_query.rs
src/session/: layout.rs  manager.rs  mod.rs
src/ws/: control.rs  files.rs  mod.rs  pane_io.rs  sysstat.rs
(+20 files in other folders)
