[package]
name = "btmux"
version = "0.0.56"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
nix = { version = "0.29", features = ["term"] }
libc = "0.2"
toml = "0.8"
notify = "6"
open = "5"
serde_yaml = "0.9"
nucleo = "0.5"
base64 = "0.22"
dirs = "6"
async-recursion = "1"
git2 = { version = "0.20", default-features = false }
trash = "5"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-streamable-http-server"] }
strip-ansi-escapes = "0.2.1"
schemars = "1.2.1"
sysinfo = "0.33"
